syntax = "proto2";
import "dccl/option_extensions.proto";

package goby.test.zeromq.protobuf;

message Sample
{
    optional int32 a = 1; 
}

message Widget
{
    optional int32 b = 1;
}



message Complete
{
    optional int32 subscriber_id = 1;
}
